renamed _assets to assets

--- a/menuExample.html
+++ b/menuExample.html
@@ -211,7 +211,7 @@ app.router.cause(<span class="string">'route:menu'</span>, <span class="string">
 </div>
 <div id="menuexample0_tabs_content" class="tabs_content">
   <div id="menuexample0result-tab" class="tab_content">
-  <iframe id="menuexample0" src="_assets/menuExample0.html" class="result"  style='height: 310px;'></iframe>
+  <iframe id="menuexample0" src="assets/menuExample0.html" class="result"  style='height: 310px;'></iframe>
 </div><div id="menuexample0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> App, MenuView, MenuItemView, ContentView, ContentItemView;
 
@@ -392,7 +392,7 @@ app.router.cause(<span class="string">'route:menu'</span>, <span class="string">
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
