--- a/templateStrategies.html
+++ b/templateStrategies.html
@@ -142,7 +142,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="templatestrategies0_tabs_content" class="tabs_content">
   <div id="templatestrategies0result-tab" class="tab_content">
-  <iframe id="templatestrategies0" src="_assets/templateStrategies0.html" class="result"  style='height: 20px'></iframe>
+  <iframe id="templatestrategies0" src="assets/templateStrategies0.html" class="result"  style='height: 20px'></iframe>
 </div><div id="templatestrategies0scriptjs-tab" class="tab_content">
   <pre><code class="language-js">Giraffe.View.setTemplateStrategy(<span class="string">'underscore-template'</span>);
 
@@ -234,7 +234,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="templatestrategies1_tabs_content" class="tabs_content">
   <div id="templatestrategies1result-tab" class="tab_content">
-  <iframe id="templatestrategies1" src="_assets/templateStrategies1.html" class="result"  style='height: 20px'></iframe>
+  <iframe id="templatestrategies1" src="assets/templateStrategies1.html" class="result"  style='height: 20px'></iframe>
 </div><div id="templatestrategies1markuphtml-tab" class="tab_content">
   <pre><code class="language-html"><span class="doctype">&lt;!DOCTYPE html&gt;</span>
 <span class="tag">&lt;<span class="title">html</span>&gt;</span>
@@ -323,7 +323,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="templatestrategies2_tabs_content" class="tabs_content">
   <div id="templatestrategies2result-tab" class="tab_content">
-  <iframe id="templatestrategies2" src="_assets/templateStrategies2.html" class="result"  style='height: 20px'></iframe>
+  <iframe id="templatestrategies2" src="assets/templateStrategies2.html" class="result"  style='height: 20px'></iframe>
 </div><div id="templatestrategies2scriptjs-tab" class="tab_content">
   <pre><code class="language-js">Giraffe.View.setTemplateStrategy(<span class="string">'jst'</span>);
 
@@ -423,7 +423,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="templatestrategies3_tabs_content" class="tabs_content">
   <div id="templatestrategies3result-tab" class="tab_content">
-  <iframe id="templatestrategies3" src="_assets/templateStrategies3.html" class="result"  style='height: 20px'></iframe>
+  <iframe id="templatestrategies3" src="assets/templateStrategies3.html" class="result"  style='height: 20px'></iframe>
 </div><div id="templatestrategies3scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> JST = {
   body: <span class="function"><span class="keyword">function</span><span class="params">(it)</span> {</span>
@@ -525,7 +525,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="templatestrategies4_tabs_content" class="tabs_content">
   <div id="templatestrategies4result-tab" class="tab_content">
-  <iframe id="templatestrategies4" src="_assets/templateStrategies4.html" class="result"  style='height: 20px'></iframe>
+  <iframe id="templatestrategies4" src="assets/templateStrategies4.html" class="result"  style='height: 20px'></iframe>
 </div><div id="templatestrategies4scriptjs-tab" class="tab_content">
   <pre><code class="language-js">Giraffe.View.setTemplateStrategy(<span class="function"><span class="keyword">function</span><span class="params">()</span> {</span>
   <span class="keyword">return</span> Mustache.render(<span class="keyword">this</span>.template, <span class="keyword">this</span>.serialize());
@@ -578,7 +578,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
