--- a/viewFlexibility.html
+++ b/viewFlexibility.html
@@ -241,7 +241,7 @@ app2.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="viewflexibility0_tabs_content" class="tabs_content">
   <div id="viewflexibility0result-tab" class="tab_content">
-  <iframe id="viewflexibility0" src="_assets/viewFlexibility0.html" class="result"  style='height: 550px;'></iframe>
+  <iframe id="viewflexibility0" src="assets/viewFlexibility0.html" class="result"  style='height: 550px;'></iframe>
 </div><div id="viewflexibility0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> ParentApp = Giraffe.App.extend({
   template: <span class="string">'#parent-app-template'</span>,
@@ -456,7 +456,7 @@ app2.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
