--- a/appEvents.html
+++ b/appEvents.html
@@ -125,7 +125,7 @@ app.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="appevents0_tabs_content" class="tabs_content">
   <div id="appevents0result-tab" class="tab_content">
-  <iframe id="appevents0" src="_assets/appEvents0.html" class="result"  style='height: 284px;'></iframe>
+  <iframe id="appevents0" src="assets/appEvents0.html" class="result"  style='height: 284px;'></iframe>
 </div><div id="appevents0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> App = Giraffe.App.extend({
   afterRender: <span class="function"><span class="keyword">function</span><span class="params">()</span> {</span>
@@ -212,7 +212,7 @@ app.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
