--- a/appInitialization.html
+++ b/appInitialization.html
@@ -105,7 +105,7 @@ app.on(<span class="string">'app:initialized'</span>, <span class="function"><sp
 </div>
 <div id="appinitialization0_tabs_content" class="tabs_content">
   <div id="appinitialization0result-tab" class="tab_content">
-  <iframe id="appinitialization0" src="_assets/appInitialization0.html" class="result"  style='height: 65px;'></iframe>
+  <iframe id="appinitialization0" src="assets/appInitialization0.html" class="result"  style='height: 65px;'></iframe>
 </div><div id="appinitialization0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> app = <span class="keyword">new</span> Giraffe.App();
 
@@ -160,7 +160,7 @@ app.attachTo(<span class="string">'body'</span>).start();</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
