--- a/dataEvents.html
+++ b/dataEvents.html
@@ -115,7 +115,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="dataevents0_tabs_content" class="tabs_content">
   <div id="dataevents0result-tab" class="tab_content">
-  <iframe id="dataevents0" src="_assets/dataEvents0.html" class="result" ></iframe>
+  <iframe id="dataevents0" src="assets/dataEvents0.html" class="result" ></iframe>
 </div><div id="dataevents0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> View = Giraffe.View.extend({
 
@@ -183,7 +183,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
