--- a/documentEvents.html
+++ b/documentEvents.html
@@ -105,7 +105,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="documentevents0_tabs_content" class="tabs_content">
   <div id="documentevents0result-tab" class="tab_content">
-  <iframe id="documentevents0" src="_assets/documentEvents0.html" class="result"  style='height: 80px;'></iframe>
+  <iframe id="documentevents0" src="assets/documentEvents0.html" class="result"  style='height: 80px;'></iframe>
 </div><div id="documentevents0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> View = Giraffe.View.extend({
   template: <span class="string">'#view-template'</span>,
@@ -159,7 +159,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
