--- a/license.html
+++ b/license.html
@@ -44,7 +44,7 @@
       <!-- Main Body -->
       <article id="content" class="col content">
         <img id="logo" src="img/logo.png" />
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x67;&#102;&#x61;&#114;&#x77;&#x65;&#x6c;&#x6c;&#64;&#x62;&#x61;&#114;&#x63;&#46;&#99;&#x6f;&#x6d;">&#x67;&#102;&#x61;&#114;&#x77;&#x65;&#x6c;&#x6c;&#64;&#x62;&#x61;&#114;&#x63;&#46;&#99;&#x6f;&#x6d;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#x62;&#97;&#114;&#x63;&#x2e;&#99;&#x6f;&#109;">&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#x62;&#97;&#114;&#x63;&#x2e;&#99;&#x6f;&#109;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
@@ -66,7 +66,7 @@ THE SOFTWARE.</p>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
