--- a/lifecycleManagement.html
+++ b/lifecycleManagement.html
@@ -141,7 +141,7 @@ app.addChild(someObject);</code></pre>
 </div>
 <div id="lifecyclemanagement0_tabs_content" class="tabs_content">
   <div id="lifecyclemanagement0result-tab" class="tab_content">
-  <iframe id="lifecyclemanagement0" src="_assets/lifecycleManagement0.html" class="result"  style='height: 129px;'></iframe>
+  <iframe id="lifecyclemanagement0" src="assets/lifecycleManagement0.html" class="result"  style='height: 129px;'></iframe>
 </div><div id="lifecyclemanagement0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> app = <span class="keyword">new</span> Giraffe.App();
 app.attachTo(<span class="string">'body'</span>);
@@ -218,7 +218,7 @@ app.dispose();</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
