--- a/routersAndAppEvents.html
+++ b/routersAndAppEvents.html
@@ -168,7 +168,7 @@ iframe, but your browser&#39;s back and forward buttons should work!
 </div>
 <div id="routersandappevents0_tabs_content" class="tabs_content">
   <div id="routersandappevents0result-tab" class="tab_content">
-  <iframe id="routersandappevents0" src="_assets/routersAndAppEvents0.html" class="result"  style='height: 154px;'></iframe>
+  <iframe id="routersandappevents0" src="assets/routersAndAppEvents0.html" class="result"  style='height: 154px;'></iframe>
 </div><div id="routersandappevents0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> App, ChildView;
 
@@ -271,7 +271,7 @@ console.log(app.router.getRoute(<span class="string">'route:childView'</span>, <
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
