--- a/viewUI.html
+++ b/viewUI.html
@@ -87,7 +87,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
 </div>
 <div id="viewui0_tabs_content" class="tabs_content">
   <div id="viewui0result-tab" class="tab_content">
-  <iframe id="viewui0" src="_assets/viewUI0.html" class="result"  style='height: 26px;'></iframe>
+  <iframe id="viewui0" src="assets/viewUI0.html" class="result"  style='height: 26px;'></iframe>
 </div><div id="viewui0scriptjs-tab" class="tab_content">
   <pre><code class="language-js"><span class="keyword">var</span> View = Giraffe.View.extend({
   ui: {
@@ -134,7 +134,7 @@ view.attachTo(<span class="string">'body'</span>);</code></pre>
   </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-  <script src="_assets/tutdown.js"></script>
+  <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
     $('.more-details').click(function() {
