fix paths for giraffe.js

--- a/license.html
+++ b/license.html
@@ -44,7 +44,7 @@
       <!-- Main Body -->
       <article id="content" class="col content">
         <img id="logo" src="img/logo.png" />
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#105;&#108;&#116;&#x6f;&#x3a;&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#x62;&#97;&#114;&#x63;&#x2e;&#99;&#x6f;&#109;">&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#x62;&#97;&#114;&#x63;&#x2e;&#99;&#x6f;&#109;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#x69;&#x6c;&#116;&#111;&#58;&#x67;&#x66;&#x61;&#x72;&#119;&#x65;&#x6c;&#108;&#64;&#98;&#x61;&#114;&#99;&#46;&#x63;&#111;&#x6d;">&#x67;&#x66;&#x61;&#x72;&#119;&#x65;&#x6c;&#108;&#64;&#98;&#x61;&#114;&#99;&#46;&#x63;&#111;&#x6d;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
