--- a/assets/appEvents0-markup.html
+++ b/assets/appEvents0-markup.html
@@ -5,4 +5,4 @@
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
-<script src="../../backbone.giraffe.js" type="text/javascript"></script>
+<script src="../backbone.giraffe.js" type="text/javascript"></script>
