--- a/license.html
+++ b/license.html
@@ -26,11 +26,11 @@
 <h2 id='h-examplesindexhtml'><a href="index.html">Examples</a></h2>
 <ul>
 <li><a href="viewBasics.html">View Basics</a></li>
+<li><a href="templateStrategies.html">Template Strategies</a></li>
 <li><a href="lifecycleManagement.html">Lifecycle Management</a></li>
 <li><a href="appEvents.html">App Events</a></li>
 <li><a href="routersAndAppEvents.html">Routers and App Events</a></li>
 <li><a href="appInitialization.html">App Initialization</a></li>
-<li><a href="templateStrategies.html">Template Strategies</a></li>
 <li><a href="documentEvents.html">View Document Events</a></li>
 <li><a href="dataEvents.html">View Data Events</a></li>
 <li><a href="viewUI.html">View UI</a></li>
@@ -44,7 +44,7 @@
       <!-- Main Body -->
       <article id="content" class="col content">
         <img id="logo" src="img/logo.png" />
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#103;&#x66;&#97;&#114;&#119;&#101;&#x6c;&#x6c;&#x40;&#x62;&#x61;&#114;&#x63;&#46;&#x63;&#x6f;&#109;">&#103;&#x66;&#97;&#114;&#119;&#101;&#x6c;&#x6c;&#x40;&#x62;&#x61;&#114;&#x63;&#46;&#x63;&#x6f;&#109;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#103;&#x66;&#x61;&#114;&#x77;&#x65;&#x6c;&#108;&#64;&#x62;&#97;&#114;&#x63;&#46;&#x63;&#x6f;&#x6d;">&#103;&#x66;&#x61;&#114;&#x77;&#x65;&#x6c;&#108;&#64;&#x62;&#97;&#114;&#x63;&#46;&#x63;&#x6f;&#x6d;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
