--- a/appEvents.html
+++ b/appEvents.html
@@ -43,7 +43,9 @@
 
       <!-- Main Body -->
       <article id="content" class="col content">
-        <img id="logo" src="img/logo.png" />
+        <a href='index.html'>
+          <img id="logo" src="img/logo.png" />
+        </a>
         <p><div class='section-example'><h1 id='h-app-events'>App Events</h1>
 <p>This example demonstrates how <strong>Giraffe.App</strong> helps your objects communicate.
 We&#39;ll create an instance of <code>Giraffe.App</code> with three child views that talk to
@@ -69,6 +71,12 @@ function passes the view to the template.</p>
 <pre><code class="html"><span class="tag">&lt;<span class="title">script</span> <span class="attribute">id</span>=<span class="value">"child-template"</span> <span class="attribute">type</span>=<span class="value">"text/template"</span>&gt;</span>
   <span class="tag">&lt;<span class="title">button</span>&gt;</span>Color the views <span class="javascript">&lt;%= options.text %&gt;</span>!<span class="tag">&lt;/<span class="title">button</span>&gt;</span>
 <span class="tag">&lt;/<span class="title">script</span>&gt;</span></code></pre>
+<div class="note">
+These examples use <strong>Giraffe</strong>&#39;s templating default, <strong>Underscore</strong> templates,
+but <strong>Giraffe</strong> supports any form of string templating. See the
+<a href="templateStrategies.html">Template Strategies</a> example for more.
+</div>
+
 <p>The <code>appEvents</code> hash is a convenient feature that helps your app&#39;s objects
 communicate. It&#39;s similar to the <strong>Backbone.View</strong> <code>events</code> hash, but instead of
 mapping DOM events it maps events on an instance of <strong>Giraffe.App</strong>.  If a
@@ -211,7 +219,7 @@ app.attachTo(<span class="string">'body'</span>);</code></pre>
     </div>
   </div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
@@ -234,6 +242,15 @@ app.attachTo(<span class="string">'body'</span>);</code></pre>
       b.src = "https://barc.com/js/libs/barc/barc.js"; 
       var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b, s); 
     })(); 
+  </script>
+  <script type="text/javascript">
+    $('#sidebar a').each(function() {
+      var 
+        $a = $(this),
+        href = window.location.href;
+      if (href.indexOf && href.indexOf($a.attr('href')) > -1 && href.indexOf('#') === -1) // hacky to grab only example links
+        $a.closest('li').addClass('active');
+    });
   </script>
 </body>
 </html>
