--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
       <!-- Main Body -->
       <article id="content" class="col content">
-        <img id="logo" src="img/logo.png" />
+        <a href='index.html'>
+          <img id="logo" src="img/logo.png" />
+        </a>
         <h1 id='h-backbonegiraffe'>Backbone.Giraffe</h1>
 <h2 id='h-introduction'>Introduction</h2>
 <p><strong>Backbone.Giraffe</strong> is a lightweight library that extends
@@ -70,9 +72,12 @@ any object can listen for.</p>
 <strong>Giraffe</strong>&#39;s lifecycle management and app events.</p>
 </li>
 </ul>
+<h2 id='h-documentation'>Documentation</h2>
+<p>Read the <a href="http://barc.github.io/backbone.giraffe/api.html"><strong>API docs</strong></a> and
+check out our <a href="http://barc.github.io/backbone.giraffe/viewBasics.html"><strong>live examples</strong></a>.</p>
 <h2 id='h-how-giraffe-is-different'>How Giraffe is Different</h2>
 <p><strong>Giraffe</strong> was created by the needs of our team as we built
-<a href="http://barc.com">Barc</a>. We tried many existing libraries but some did way too
+<a href="http://barc.com"><strong>Barc</strong></a>. We tried many existing libraries but some did way too
 much, others added too many layers, and others performed poorly.</p>
 <p><strong>Giraffe</strong> does not have all the bells and whistles of the larger frameworks.
 We found the effort to customize them for our needs was more effort than simply 
@@ -125,7 +130,7 @@ pm run all</code></pre>
     </div>
   </div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
@@ -148,6 +153,15 @@ pm run all</code></pre>
       b.src = "https://barc.com/js/libs/barc/barc.js"; 
       var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b, s); 
     })(); 
+  </script>
+  <script type="text/javascript">
+    $('#sidebar a').each(function() {
+      var 
+        $a = $(this),
+        href = window.location.href;
+      if (href.indexOf && href.indexOf($a.attr('href')) > -1 && href.indexOf('#') === -1) // hacky to grab only example links
+        $a.closest('li').addClass('active');
+    });
   </script>
 </body>
 </html>
