--- a/license.html
+++ b/license.html
@@ -43,8 +43,10 @@
 
       <!-- Main Body -->
       <article id="content" class="col content">
-        <img id="logo" src="img/logo.png" />
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#x67;&#x66;&#x61;&#114;&#119;&#x65;&#x6c;&#108;&#64;&#98;&#x61;&#114;&#x63;&#46;&#99;&#x6f;&#109;">&#x67;&#x66;&#x61;&#114;&#119;&#x65;&#x6c;&#108;&#64;&#98;&#x61;&#114;&#x63;&#46;&#99;&#x6f;&#109;</a></p>
+        <a href='index.html'>
+          <img id="logo" src="img/logo.png" />
+        </a>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;&#x3a;&#x67;&#x66;&#x61;&#114;&#119;&#x65;&#x6c;&#108;&#64;&#x62;&#x61;&#114;&#x63;&#x2e;&#99;&#111;&#109;">&#x67;&#x66;&#x61;&#114;&#119;&#x65;&#x6c;&#108;&#64;&#x62;&#x61;&#114;&#x63;&#x2e;&#99;&#111;&#109;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
@@ -65,7 +67,7 @@ THE SOFTWARE.</p>
     </div>
   </div>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <script src="assets/tutdown.js"></script>
   <script>
   $(function() {
@@ -88,6 +90,15 @@ THE SOFTWARE.</p>
       b.src = "https://barc.com/js/libs/barc/barc.js"; 
       var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b, s); 
     })(); 
+  </script>
+  <script type="text/javascript">
+    $('#sidebar a').each(function() {
+      var 
+        $a = $(this),
+        href = window.location.href;
+      if (href.indexOf && href.indexOf($a.attr('href')) > -1 && href.indexOf('#') === -1) // hacky to grab only example links
+        $a.closest('li').addClass('active');
+    });
   </script>
 </body>
 </html>
