--- a/license.html
+++ b/license.html
@@ -46,7 +46,7 @@
         <a href='index.html'>
           <img id="logo" src="img/logo.png" />
         </a>
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#103;&#x66;&#97;&#114;&#x77;&#x65;&#108;&#x6c;&#64;&#98;&#x61;&#114;&#99;&#46;&#99;&#111;&#x6d;">&#103;&#x66;&#97;&#114;&#x77;&#x65;&#108;&#x6c;&#64;&#98;&#x61;&#114;&#99;&#46;&#99;&#111;&#x6d;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#x3a;&#x67;&#x66;&#x61;&#x72;&#x77;&#101;&#x6c;&#x6c;&#64;&#98;&#97;&#x72;&#x63;&#46;&#99;&#111;&#x6d;">&#x67;&#x66;&#x61;&#x72;&#x77;&#101;&#x6c;&#x6c;&#64;&#98;&#97;&#x72;&#x63;&#46;&#99;&#111;&#x6d;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
