--- a/license.html
+++ b/license.html
@@ -46,7 +46,7 @@
         <a href='index.html'>
           <img id="logo" src="img/logo.png" />
         </a>
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#103;&#x66;&#x61;&#x72;&#119;&#x65;&#x6c;&#x6c;&#64;&#x62;&#97;&#x72;&#x63;&#46;&#99;&#111;&#109;">&#103;&#x66;&#x61;&#x72;&#119;&#x65;&#x6c;&#x6c;&#64;&#x62;&#97;&#x72;&#x63;&#46;&#99;&#111;&#109;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#103;&#102;&#x61;&#x72;&#119;&#101;&#108;&#x6c;&#x40;&#98;&#x61;&#114;&#99;&#46;&#x63;&#111;&#109;">&#103;&#102;&#x61;&#x72;&#119;&#101;&#108;&#x6c;&#x40;&#98;&#x61;&#114;&#99;&#46;&#x63;&#111;&#109;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
