--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         </a>
         <h1 id='h-backbonegiraffe'>Backbone.Giraffe</h1>
 <h2 id='h-introduction'>Introduction</h2>
-<p><strong>Backbone.Giraffe</strong> is a lightweight library that extends
+<p><strong>Backbone.Giraffe</strong> is a light and flexible library that extends
 <a href="http://documentcloud.github.com/backbone/"><strong>Backbone.js</strong></a> to new heights.
-<strong>Giraffe</strong>&#39;s goal is to follow the <strong>Backbone</strong> philosophy of simplicity and
-flexibilty to provide commonly needed features with few assumptions. It differs
+<strong>Giraffe</strong>&#39;s goal is to follow the <strong>Backbone</strong> philosophy of unopinionated
+simplicity to provide commonly needed features with few assumptions. It differs
 from other <strong>Backbone</strong> libraries like <strong>Marionette</strong> and <strong>Chaplin</strong> in its
 reduced scope and size, and it takes a different approach to the problems of
 route handling, object lifecycles, event aggregation, and view management.</p>
@@ -86,7 +86,7 @@ concept of specialized containers like regions or layouts, as any view in
 <strong>Giraffe</strong> can act as a parent of one or more child views. <strong>Giraffe</strong> also
 has no CollectionView or ItemView, but we are open to suggestions to make
 <strong>Giraffe</strong> as useful as possible to <strong>Backbone</strong> developers who want an
-unopinionated extension library.</p>
+extension library with few opinions.</p>
 <p>Is this framework for you? It depends. We feel <strong>Giraffe</strong> adds essential
 features to make you more productive with <strong>Backbone</strong>.</p>
 <h3 id='h-highlights'>Highlights</h3>
@@ -117,11 +117,15 @@ try to be <strong>Knockout</strong> or <strong>AngularJS</strong>)</p>
 </li>
 </ul>
 <h2 id='h-download'>Download</h2>
-<p><a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js">backbone.giraffe.js</a> <em>51.2k</em> <strong>(version 0.1)</strong></p>
-<p><a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js">backbone.giraffe.min.js</a> <em>15.6k</em></p>
-<h2 id='h-building'>Building</h2>
-<pre><code>npm install projmate-cli@0.1.0-dev -g
-pm run all</code></pre>
+<p><strong>Version 0.1</strong></p>
+<p>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">54.6k</em>
+</p>
+<p>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">16.1k</em>
+</p>
+
+<p><a href="https://github.com/barc/backbone.giraffe">Giraffe on Github</a></p>
 <h2 id='h-license'>License</h2>
 <p>Copyright (c) 2013 Barc Inc.</p>
 <p>See the file <a href="license.html">LICENSE</a> for copying permission.</p>
