--- a/license.html
+++ b/license.html
@@ -46,7 +46,7 @@
         <a href='index.html'>
           <img id="logo" src="img/logo.png" />
         </a>
-        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#103;&#102;&#97;&#x72;&#119;&#x65;&#x6c;&#108;&#x40;&#x62;&#x61;&#114;&#99;&#x2e;&#99;&#111;&#109;">&#103;&#102;&#97;&#x72;&#119;&#x65;&#x6c;&#108;&#x40;&#x62;&#x61;&#114;&#99;&#x2e;&#99;&#111;&#109;</a></p>
+        <p>Copyright (c) 2013 Barc Inc. <a href="&#109;&#x61;&#x69;&#108;&#x74;&#x6f;&#x3a;&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#98;&#97;&#x72;&#x63;&#x2e;&#x63;&#111;&#109;">&#x67;&#x66;&#97;&#x72;&#119;&#101;&#108;&#108;&#x40;&#98;&#97;&#x72;&#x63;&#x2e;&#x63;&#111;&#109;</a></p>
 <p>Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the &quot;Software&quot;), to deal
 in the Software without restriction, including without limitation the rights
