--- a/viewBasics.html
+++ b/viewBasics.html
@@ -61,7 +61,7 @@ extended just like a <strong>Backbone.View</strong>.</p>
 template. This can be easily configured to support any form of string
 templating. For more information, see <code>template</code>, <code>setTemplateStrategy</code>, and
 <code>templateStrategy</code> in the <a href="api.html#View-template">API docs</a> or the
-<a href="templateStrategies.html">Template Strategies</a> example. The included strategies
+<a href="templateStrategies.html"><em>Template Strategies</em> example</a>. The included strategies
 use a view&#39;s <code>serialize</code> function to get the data passed into the template.</p>
 <pre><code class="html"><span class="tag">&lt;<span class="title">script</span> <span class="attribute">id</span>=<span class="value">"my-template"</span> <span class="attribute">type</span>=<span class="value">"text/template"</span>&gt;</span>
   Hello <span class="javascript">&lt;%= name %&gt;</span>!
