--- a/menuExample.html
+++ b/menuExample.html
@@ -47,7 +47,7 @@
         <a href='index.html'>
           <img id="logo" src="img/logo.png" />
         </a>
-        <p><div class='section-example'><h1 id='h-menu-example'>Menu Example</h1>
+        <div class='section-example'><h1 id='h-menu-example'>Menu Example</h1>
 <p>This advanced example demonstrates how you can use <strong>Giraffe</strong>&#39;s features to build a
 route-powered menu with cached content views that save their scroll position.</p>
 <pre><code class="js"><span class="keyword">var</span> App, MenuView, MenuItemView, ContentView, ContentItemView;</code></pre>
@@ -159,7 +159,7 @@ state, like speed.
 
 <h2 id='h-the-contentitemview'>The ContentItemView</h2>
 <p>The <code>ContentItemView</code> displays the name of the content. Because these are
-created with <code>options.saveScrollPosition</code> set to <code>true</code>, they save their scroll
+created with <code>saveScrollPosition</code> set to <code>true</code>, they save their scroll
 position when detached and apply it when attached.</p>
 <pre><code class="js">ContentItemView = Giraffe.View.extend({
   className: <span class="string">'content-item-view'</span>,
@@ -389,8 +389,7 @@ app.router.cause(<span class="string">'route:menu'</span>, <span class="string">
   <span class="rule"><span class="attribute">border</span>:<span class="value"> <span class="number">1</span>px solid <span class="hexcolor">#bbb</span></span></span>;
 <span class="rule">}</span></span></code></pre>
 </div>
-</div></div></p>
-
+</div></div>
       </article>
     </div>
   </div>
