--- a/routersAndAppEvents.html
+++ b/routersAndAppEvents.html
@@ -47,7 +47,7 @@
         <a href='index.html'>
           <img id="logo" src="img/logo.png" />
         </a>
-        <p><div class='section-example'><h1 id='h-routers-and-app-events'>Routers and App Events</h1>
+        <div class='section-example'><h1 id='h-routers-and-app-events'>Routers and App Events</h1>
 <p>This example demonstrates how <strong>Giraffe.Router</strong> ties into the <code>appEvents</code>
 described in the <a href="appEvents.html">App Events</a> example.</p>
 <pre><code class="js"><span class="keyword">var</span> App, ChildView;</code></pre>
@@ -122,7 +122,7 @@ name and a color.</p>
   }
 });</code></pre>
 <pre><code class="html"><span class="tag">&lt;<span class="title">script</span> <span class="attribute">id</span>=<span class="value">"child-template"</span> <span class="attribute">type</span>=<span class="value">"text/template"</span>&gt;</span>
-  <span class="tag">&lt;<span class="title">h2</span>&gt;</span>child view <span class="javascript">&lt;%= options.name %&gt;</span><span class="tag">&lt;/<span class="title">h2</span>&gt;</span>
+  <span class="tag">&lt;<span class="title">h2</span>&gt;</span>child view <span class="javascript">&lt;%= name %&gt;</span><span class="tag">&lt;/<span class="title">h2</span>&gt;</span>
 <span class="tag">&lt;/<span class="title">script</span>&gt;</span></code></pre>
 <h2 id='h-loading-the-app'>Loading the App</h2>
 <p>It&#39;s time to create and attach the app.</p>
@@ -252,7 +252,7 @@ console.log(app.router.getRoute(<span class="string">'route:childView'</span>, <
 <span class="tag">&lt;/<span class="title">script</span>&gt;</span>
 
 <span class="tag">&lt;<span class="title">script</span> <span class="attribute">id</span>=<span class="value">"child-template"</span> <span class="attribute">type</span>=<span class="value">"text/template"</span>&gt;</span>
-  <span class="tag">&lt;<span class="title">h2</span>&gt;</span>child view <span class="javascript">&lt;%= options.name %&gt;</span><span class="tag">&lt;/<span class="title">h2</span>&gt;</span>
+  <span class="tag">&lt;<span class="title">h2</span>&gt;</span>child view <span class="javascript">&lt;%= name %&gt;</span><span class="tag">&lt;/<span class="title">h2</span>&gt;</span>
 <span class="tag">&lt;/<span class="title">script</span>&gt;</span>
 
 <span class="tag">&lt;<span class="title">script</span> <span class="attribute">src</span>=<span class="value">"http://code.jquery.com/jquery-1.9.1.min.js"</span>&gt;</span><span class="tag">&lt;/<span class="title">script</span>&gt;</span>
@@ -274,8 +274,7 @@ console.log(app.router.getRoute(<span class="string">'route:childView'</span>, <
   <span class="rule"><span class="attribute">border</span>:<span class="value"> <span class="number">1</span>px dashed <span class="hexcolor">#999</span></span></span>;
 <span class="rule">}</span></span></code></pre>
 </div>
-</div></div></p>
-
+</div></div>
       </article>
     </div>
   </div>
