--- a/index.html
+++ b/index.html
@@ -128,19 +128,25 @@ in markup provides simple one-way binding. (does not try to be <strong>Knockout<
 <strong>AngularJS</strong>)</p>
 </li>
 </ul>
+<h2 id='h-changelog'>Changelog</h2>
+<h1 id='h-013'>0.1.3</h1>
+<ul>
+<li>Added the function <code>Giraffe.configure</code> that adds Giraffe features to any object.
+It abstracts out common functionality and can be considered a mixin.</li>
+</ul>
 <h2 id='h-download'>Download</h2>
-<p><strong>Version 0.1.3</strong></p>
+<p><strong>Version 0.1.4</strong></p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">59.6k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">62k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">16.5k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">16.8k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">14.3k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">15.4k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">5k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">5.6k</em>
 </p>
 
 <p><a href="https://github.com/barc/backbone.giraffe">Giraffe on Github</a></p>
