--- a/index.html
+++ b/index.html
@@ -130,22 +130,30 @@ in markup provides simple one-way binding. (does not try to be <strong>Knockout<
 </li>
 </ul>
 <h2 id='h-download'>Download</h2>
-<p><strong>Version 0.2.2</strong></p>
+<p><strong>Version 0.2.4</strong></p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">65.5k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">65.7k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">17.8k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">17.9k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">16.9k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">16.8k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6.1k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6k</em>
 </p>
 
 <p><a href="https://github.com/barc/backbone.giraffe">Giraffe on Github</a></p>
 <h2 id='h-changelog'>Changelog</h2>
+<h3 id='h-024'>0.2.4</h3>
+<ul>
+<li>Allow passing routing options to Giraffe.Router#cause.</li>
+</ul>
+<h3 id='h-023'>0.2.3</h3>
+<ul>
+<li>Fixed support for 0 as a path param.</li>
+</ul>
 <h3 id='h-022'>0.2.2</h3>
 <ul>
 <li>Added Backbone and Underscore CommonJS requires to Giraffe.Contrib.</li>
