--- a/index.html
+++ b/index.html
@@ -128,24 +128,36 @@ asynchronous bootstrap data or a websocket connection before starting.</p>
 in markup provides simple one-way binding. (does not try to be <strong>Knockout</strong> or
 <strong>AngularJS</strong>)</p>
 </li>
+<li><p><a href="https://github.com/barc/backbone.giraffe/blob/master/src/backbone.giraffe.contrib.coffee"><strong>Optional Giraffe.Contrib</strong></a>
+extensions include a simple Controller class with <strong>Giraffe</strong>&#39;s lifecycle and <code>appEvents</code> features,
+a <a href="http://barc.github.io/backbone.giraffe/collectionView.html">CollectionView</a>
+that renders a collection with a view per model,
+and a <a href="http://barc.github.io/backbone.giraffe/fastCollectionView.html">FastCollectionView</a>
+that renders a collection with a single view
+<a href="http://jsperf.com/collection-views-in-giraffe-and-marionette/5">more efficiently than Giraffe.Contrib.CollectionView and Marionette.CollectionView</a>.</p>
+</li>
 </ul>
 <h2 id='h-download'>Download</h2>
-<p><strong>Version 0.2.6</strong></p>
+<p><strong>Version 0.2.7</strong></p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">66.6k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">70.3k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">18.2k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">18.3k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">16.8k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">18.1k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6.1k</em>
 </p>
 
 <p><a href="https://github.com/barc/backbone.giraffe">Giraffe on Github</a></p>
 <h2 id='h-changelog'>Changelog</h2>
+<h3 id='h-027'>0.2.7</h3>
+<ul>
+<li>Fixed module loader for r.js optimizer.</li>
+</ul>
 <h3 id='h-026'>0.2.6</h3>
 <ul>
 <li><p>Configured objects (including all Giraffe objects) now have the following
