--- a/index.html
+++ b/index.html
@@ -138,22 +138,28 @@ that renders a collection with a single view
 </li>
 </ul>
 <h2 id='h-download'>Download</h2>
-<p><strong>Version 0.2.7</strong></p>
+<p><strong>Version 0.2.8</strong></p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">70.3k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.js" class="big-button">backbone.giraffe.js</a><em class="button-size-label">70.5k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">18.3k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.min.js" class="big-button">backbone.giraffe.min.js</a><em class="button-size-label">18.4k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">18.1k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.js" class="big-button big-green-button">backbone.giraffe.contrib.js</a><em class="button-size-label">18.3k</em>
 </p>
 <p>
-<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6.1k</em>
+<a href="https://raw.github.com/barc/backbone.giraffe/master/dist/backbone.giraffe.contrib.min.js" class="big-button big-green-button">backbone.giraffe.contrib.min.js</a><em class="button-size-label">6.2k</em>
 </p>
 
 <p><a href="https://github.com/barc/backbone.giraffe">Giraffe on Github</a></p>
 <h2 id='h-changelog'>Changelog</h2>
+<h3 id='h-028'>0.2.8</h3>
+<ul>
+<li>Fixed AMD loader.</li>
+<li>Added <code>Giraffe.noConflict</code> and <code>Giraffe.Contrib.noConflict</code>.</li>
+<li><code>Contrib</code> now attaches itself as <code>root.GiraffeContrib</code> in addition to the existing <code>Giraffe.Contrib</code>.</li>
+</ul>
 <h3 id='h-027'>0.2.7</h3>
 <ul>
 <li>Fixed module loader for r.js optimizer.</li>
